<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_tab_home"
        android:title="@string/tab_home" />

    <item
        android:id="@+id/catalog"
        android:icon="@drawable/ic_tab_catalog"
        android:title="@string/tab_catalog" />

    <item
        android:id="@+id/menuBasket"
        android:icon="@drawable/ic_tab_basket"
        android:title="@string/tab_basket" />

    <item
        android:id="@+id/menuDiscount"
        android:icon="@drawable/ic_tab_discount"
        android:title="@string/tab_discount" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_tab_profile"
        android:title="@string/tab_profile" />

</menu>