<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.infoshell.book24.BuildConfig" />

        <variable
            name="viewModel"
            type="com.infoshell.presentation.ui.profile.unauthorized.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.infoshell.presentation.ui.custom.interceptors.InterceptLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingStart="@dimen/grid_20"
            android:paddingEnd="@dimen/grid_20"
            app:isIntercept="@{viewModel.isLoginProcessing}">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_page_title" />

            <androidx.cardview.widget.CardView
                style="@style/CardView.InputForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/shape_form_divider_grey"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/grid_20"
                    android:paddingTop="@dimen/grid_12"
                    android:paddingEnd="@dimen/grid_20"
                    android:paddingBottom="@dimen/grid_12"
                    android:showDividers="middle">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInputLayout.Normal"
                        android:layout_marginBottom="@dimen/grid_8"
                        android:hint="@string/hint_email"
                        android:theme="@style/TextInputLayoutAppearance.Black"
                        app:errorMessage="@{viewModel.emailError}">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:paddingTop="@dimen/grid_12"
                            android:paddingBottom="@dimen/grid_8"
                            android:singleLine="true"
                            android:text="@={viewModel.loginCredential.email}"
                            android:textAppearance="@style/TextAppearance.Medium"
                            tools:text="UserName" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInputLayout.Normal"
                        android:layout_marginTop="@dimen/grid_8"
                        android:hint="@string/hint_pswd"
                        android:theme="@style/TextInputLayoutAppearance.Black"
                        app:errorMessage="@{viewModel.passwordError}"
                        app:passwordToggleEnabled="true">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:text="@={viewModel.loginCredential.password}"
                            android:textAppearance="@style/TextAppearance.Medium"
                            tools:text="Password" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_20"
                android:layout_marginTop="@dimen/grid_20"
                android:layout_marginEnd="@dimen/grid_20">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    style="@style/Button.Green"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="@{viewModel.isLoginProcessing}"
                    android:onClick="@{() -> viewModel.login()}"
                    android:text="@string/btn_login" />

                <ProgressBar
                    style="@style/ProgressBarWhite"
                    android:layout_width="@dimen/grid_24"
                    android:layout_height="@dimen/grid_24"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="@dimen/grid_8"
                    android:translationZ="@dimen/grid_24"
                    android:visibility="@{viewModel.isLoginProcessing ? View.VISIBLE : View.GONE}" />

            </FrameLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnForgotPassword"
                style="@style/Button.Transparent.Blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_20"
                android:layout_marginTop="@dimen/grid_20"
                android:layout_marginEnd="@dimen/grid_20"
                android:onClick="@{() -> viewModel.forgotPassword()}"
                android:text="@string/btn_fgt_pswd" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDebugCredential"
                style="@style/Button.Transparent.Blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_20"
                android:layout_marginTop="@dimen/grid_20"
                android:layout_marginEnd="@dimen/grid_20"
                android:onClick="@{() -> viewModel.setDebugCredential()}"
                android:text="Тест"
                android:visibility="@{BuildConfig.DEBUG ? View.VISIBLE : View.GONE}"
                tools:ignore="HardcodedText" />

        </com.infoshell.presentation.ui.custom.interceptors.InterceptLinearLayout>

    </ScrollView>

</layout>